<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_upload_category"
        android:title="@string/pref_upload_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:dialogTitle="@string/pref_upload_title"
            android:key="upload_data_preference"
            android:summaryOff="@string/pref_upload_summaryOff"
            android:summaryOn="@string/pref_upload_summaryOn"
            android:title="@string/pref_upload_title" />
         <EditTextPreference
            android:defaultValue="3"
            android:dialogTitle="@string/pref_upload_ratio_title"
            android:key="upload_ratio_preference"
            android:summary="@string/pref_upload_ratio_summary"
            android:title="@string/pref_upload_ratio_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_pref_bluetooth">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_bluetooth_title"
            android:key="enable_bluetooth_preference"
            android:summaryOff="@string/pref_bluetooth_summaryOff"
            android:summaryOn="@string/pref_bluetooth_summaryOn"
            android:title="@string/pref_bluetooth_title" />
        <ListPreference
            android:dialogTitle="@string/pref_bluetooth_list_devices_title"
            android:key="bluetooth_list_preference"
            android:summary="@string/pref_bluetooth_list_devices_summary"
            android:title="@string/pref_bluetooth_list_devices_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_gps_category"
        android:title="@string/title_pref_gps">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_gps_category_title"
            android:key="enable_gps_preference"
            android:summaryOff="@string/pref_gps_category_summaryOff"
            android:summaryOn="@string/pref_gps_category_summaryOn"
            android:title="@string/pref_gps_category_title" />
        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_gps_update_period_title"
            android:key="gps_update_period_preference"
            android:summary="@string/pref_gps_update_period_summary"
            android:title="@string/pref_gps_update_period_title" />
        <EditTextPreference
            android:defaultValue="5"
            android:dialogTitle="@string/pref_gps_distance_period_title"
            android:key="gps_distance_period_preference"
            android:summary="@string/pref_gps_distance_period_summary"
            android:title="@string/pref_gps_distance_period_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_pref_obd">
        <ListPreference
            android:defaultValue="AUTO"
            android:dialogTitle="@string/pref_obd_protocols_title"
            android:key="obd_protocols_preference"
            android:summary="@string/pref_obd_protocols_summary"
            android:title="@string/pref_obd_protocols_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="@string/pref_imperial_units_title"
            android:key="imperial_units_preference"
            android:summaryOff="@string/pref_imperial_units_summaryOff"
            android:summaryOn="@string/pref_imperial_units_summaryOn"
            android:title="@string/pref_imperial_units_title" />
        <EditTextPreference
            android:defaultValue="10"
            android:dialogTitle="@string/pref_obd_update_period_title"
            android:key="obd_update_period_preference"
            android:summary="@string/pref_obd_update_period_summary"
            android:title="@string/pref_obd_update_period_title" />
    </PreferenceCategory>
</PreferenceScreen>
