<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vehicle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:tag="VIN_from_resource"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/text_zero"
            />
    </TableRow>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:tag="ENGINE_RPM"
            android:textSize="12pt"
            android:text="@string/text_zero"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12pt"
            android:tag="ENGINE_LOAD"
            android:text="@string/text_zero"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="SPEED"
            android:textSize="12pt"
            android:text="@string/text_zero" />
    </TableRow>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="RECORDER_BYTES"
            android:textSize="12pt"

            android:text="@string/text_consumption_default" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12pt"
            android:tag="ENGINE_COOLANT_TEMP"
            android:text="@string/text_zero" />


    </TableRow>

    <Space
        android:layout_width="20dp"
        android:layout_height="200dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_gps"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_bluetooth"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_obd"
            android:textSize="@dimen/abc_text_size_medium_material" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/GPS_POS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/BT_STATUS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/OBD_STATUS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />
    </TableRow>

</LinearLayout>
